large update to add hyperlinks to header and footer nav. Also addressed some alignment issues with the scrollbar.

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -21,6 +21,7 @@
 
   .right {
     margin: 0rem 1rem;
+    text-align: center;
   }
 
 }
@@ -49,6 +50,7 @@
 
   .right {
     margin: 0rem 3rem;
+    text-align: center;
   }
 
 }
@@ -72,7 +74,9 @@
 
   .right {
     margin: 0rem 4rem;
+    text-align: center;
   }
+
 }
 
 /* Tablet */
@@ -88,9 +92,16 @@
 
   .content-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     font-size: 0.8rem;
     margin: 2rem 1rem;
+  }
+}
+
+/* image fix */
+@media (min-width: 500px) and (max-width: 949px){
+    .hero {
+    width: 50%;
   }
 }
 
@@ -116,7 +127,7 @@
     font-size: 0.95rem;
   }
 
-.content-container {
+  .content-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -125,5 +136,9 @@
     margin-inline: auto;
     margin-top: 4.5rem;
     margin-bottom: 3rem;
+  }
+
+  .right {
+    text-align: left;
   }
 }
